--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "strapi-plugin-responsive-image",
-  "version": "1.2.0",
-  "description": "Custom responsive image formats for strapi.",
+  "name": "strapi-plugin-responsive-image-watermark",
+  "version": "1.3.0",
+  "description": "Custom responsive image formats for strapi with watermark.",
   "strapi": {
     "name": "responsive-image",
     "displayName": "Responsive Image",
     "icon": "images",
-    "description": "Custom responsive image formats for strapi.",
+    "description": "Custom responsive image formats for strapi with watermark.",
     "kind": "plugin"
   },
   "dependencies": {},
@@ -17,20 +17,21 @@
     "name": "Nicolas Hamelin",
     "url": "https://nicolashamelin.fr"
   },
-  "homepage": "https://github.com/nicolashmln/strapi-plugin-responsive-image",
+  "homepage": "https://github.com/kitolog/strapi-plugin-responsive-image",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nicolashmln/strapi-plugin-responsive-image"
+    "url": "https://github.com/kitolog/strapi-plugin-responsive-image"
   },
   "keywords": [
     "strapi",
     "plugin",
     "responsive",
+    "watermark",
     "image",
     "media"
   ],
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
+    "node": ">=18.0.0 <=22.x.x",
     "npm": ">=8.0.0"
   },
   "license": "MIT"
